--- a/docs/blog/2020-02-aem-on-java-11/gradle.properties
+++ b/docs/blog/2020-02-aem-on-java-11/gradle.properties
@@ -10,29 +10,33 @@ fileTransfer.domain=COMPANY_DOMAIN
 instance.local-author.httpUrl=http://localhost:4502
 instance.local-author.type=local
 instance.local-author.runModes=local,nosamplecontent
-instance.local-author.jvmOpts=-server -Xmx2048m -XX:MaxPermSize=512M -Djava.awt.headless=true \
-                                  -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:14502 \
-                                  --add-opens=java.desktop/com.sun.imageio.plugins.jpeg=ALL-UNNAMED \
-                                  --add-opens=java.base/sun.net.www.protocol.jrt=ALL-UNNAMED \
-                                  --add-opens=java.naming/javax.naming.spi=ALL-UNNAMED \
-                                  --add-opens=java.xml/com.sun.org.apache.xerces.internal.dom=ALL-UNNAMED \
-                                  --add-opens=java.base/java.lang=ALL-UNNAMED \
-                                  --add-opens=java.base/jdk.internal.loader=ALL-UNNAMED \
-                                  --add-opens=java.base/java.net=ALL-UNNAMED \
-                                  -XX:+UseParallelGC \
-                                  -Dnashorn.args=--no-deprecation-warning
+instance.local-author.debugAddress=*
+instance.local-author.jvmOpts=-server \
+              -Xmx2048m -XX:MaxPermSize=512M \
+              -Djava.awt.headless=true \
+              --add-opens=java.desktop/com.sun.imageio.plugins.jpeg=ALL-UNNAMED \
+              --add-opens=java.base/sun.net.www.protocol.jrt=ALL-UNNAMED \
+              --add-opens=java.naming/javax.naming.spi=ALL-UNNAMED \
+              --add-opens=java.xml/com.sun.org.apache.xerces.internal.dom=ALL-UNNAMED \
+              --add-opens=java.base/java.lang=ALL-UNNAMED \
+              --add-opens=java.base/jdk.internal.loader=ALL-UNNAMED \
+              --add-opens=java.base/java.net=ALL-UNNAMED \
+              -XX:+UseParallelGC \
+              -Dnashorn.args=--no-deprecation-warning
 
 instance.local-publish.httpUrl=http://localhost:4503
 instance.local-publish.type=local
 instance.local-publish.runModes=local,nosamplecontent
-instance.local-publish.jvmOpts=-server -Xmx2048m -XX:MaxPermSize=512M -Djava.awt.headless=true \
-                                  -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:14502 \
-                                  --add-opens=java.desktop/com.sun.imageio.plugins.jpeg=ALL-UNNAMED \
-                                  --add-opens=java.base/sun.net.www.protocol.jrt=ALL-UNNAMED \
-                                  --add-opens=java.naming/javax.naming.spi=ALL-UNNAMED \
-                                  --add-opens=java.xml/com.sun.org.apache.xerces.internal.dom=ALL-UNNAMED \
-                                  --add-opens=java.base/java.lang=ALL-UNNAMED \
-                                  --add-opens=java.base/jdk.internal.loader=ALL-UNNAMED \
-                                  --add-opens=java.base/java.net=ALL-UNNAMED \
-                                  -XX:+UseParallelGC \
-                                  -Dnashorn.args=--no-deprecation-warning
+instance.local-publish.debugAddress=*
+instance.local-publish.jvmOpts=-server \
+              -Xmx2048m -XX:MaxPermSize=512M \
+              -Djava.awt.headless=true \
+              --add-opens=java.desktop/com.sun.imageio.plugins.jpeg=ALL-UNNAMED \
+              --add-opens=java.base/sun.net.www.protocol.jrt=ALL-UNNAMED \
+              --add-opens=java.naming/javax.naming.spi=ALL-UNNAMED \
+              --add-opens=java.xml/com.sun.org.apache.xerces.internal.dom=ALL-UNNAMED \
+              --add-opens=java.base/java.lang=ALL-UNNAMED \
+              --add-opens=java.base/jdk.internal.loader=ALL-UNNAMED \
+              --add-opens=java.base/java.net=ALL-UNNAMED \
+              -XX:+UseParallelGC \
+              -Dnashorn.args=--no-deprecation-warning
