dispatcher blog post - initial

--- a/docs/blog/2020-08-01-dispatcher/gradle.properties
+++ b/docs/blog/2020-08-01-dispatcher/gradle.properties
@@ -1,6 +1,6 @@
 # AEM distribution
-localInstance.quickstart.jarUrl=smb://smb-host/aem/6.5.0/cq-quickstart-6.5.0.jar
-localInstance.quickstart.licenseUrl=/Users/user.name/aem/6.5.0/license.properties
+localInstance.quickstart.jarUrl=file:///Users/damian.mierzwinski/aem/6.5/cq-quickstart-6.5.0.jar
+localInstance.quickstart.licenseUrl=file:///Users/damian.mierzwinski/aem/6.5/license.properties
 
 fileTransfer.user=user.name
 fileTransfer.password=
@@ -9,10 +9,10 @@ fileTransfer.domain=COMPANY_DOMAIN
 # Instance description
 instance.local-author.httpUrl=http://localhost:4502
 instance.local-author.type=local
-instance.local-author.runModes=local,nosamplecontent
+instance.local-author.runModes=local
 instance.local-author.jvmOpts=-server -Xmx2048m -XX:MaxPermSize=512M -Djava.awt.headless=true
 
 instance.local-publish.httpUrl=http://localhost:4503
 instance.local-publish.type=local
-instance.local-publish.runModes=local,nosamplecontent
+instance.local-publish.runModes=local
 instance.local-publish.jvmOpts=-server -Xmx2048m -XX:MaxPermSize=512M -Djava.awt.headless=true
