dispatcher blog post - mock distribution

--- a/docs/blog/2020-09-aem-dispacher-with-ease/gradle.properties
+++ b/docs/blog/2020-09-aem-dispacher-with-ease/gradle.properties
@@ -1,6 +1,6 @@
 # AEM distribution
-localInstance.quickstart.jarUrl=file:///Users/damian.mierzwinski/aem/6.5/cq-quickstart-6.5.0.jar
-localInstance.quickstart.licenseUrl=file:///Users/damian.mierzwinski/aem/6.5/license.properties
+localInstance.quickstart.jarUrl=smb://smb-host/aem/6.5.0/cq-quickstart-6.5.0.jar
+localInstance.quickstart.licenseUrl=/Users/user.name/aem/6.5.0/license.properties
 
 fileTransfer.user=user.name
 fileTransfer.password=
