--- a/src/asset/localInstance/defaults/service/systemd.conf
+++ b/src/asset/localInstance/defaults/service/systemd.conf
@@ -16,6 +16,7 @@ LimitNOFILE={{ instance.serviceOpts['limitNoFile'] }}
 KillMode=none
 
 ExecStart={{instance.dir}}/service/start.sh
+ExecStartPost=/bin/sleep 5s
 ExecStop=-{{instance.dir}}/service/stop.sh
 
 [Install]
