Service bug fixes

--- a/src/asset/localInstance/defaults/service/systemd.conf
+++ b/src/asset/localInstance/defaults/service/systemd.conf
@@ -17,7 +17,10 @@ KillMode=none
 
 ExecStart={{instance.dir}}/service/start.sh
 ExecStartPost=/bin/sleep 5s
-ExecStop=-{{instance.dir}}/service/stop.sh
+ExecStop={{instance.dir}}/service/stop.sh
+
+TimeoutStartSec=1810
+TimeoutStopSec=190
 
 [Install]
 WantedBy=multi-user.target
