Service / systemd works

--- a/src/asset/localInstance/defaults/service/systemd.conf
+++ b/src/asset/localInstance/defaults/service/systemd.conf
@@ -7,7 +7,8 @@ Requires=network.target
 
 [Service]
 Type=forking
-PIDFile={{ instance.pidFile }}
+GuessMainPID=yes
+# PIDFile={{ instance.pidFile }}
 
 User={{ instance.serviceOpts['user'] }}
 Group={{ instance.serviceOpts['group'] }}
