--- a/src/asset/localInstance/defaults/service/systemd.conf
+++ b/src/asset/localInstance/defaults/service/systemd.conf
@@ -6,9 +6,13 @@ After=multi-user.target
 Requires=network.target
 
 [Service]
-Type=forking
-GuessMainPID=yes
-# PIDFile={{ instance.pidFile }}
+Type=oneshot
+RemainAfterExit=true
+
+# TODO use PID & handle restrictions
+#Type=forking
+#GuessMainPID=no
+#PIDFile={{ instance.pidFile }}
 
 User={{ instance.serviceOpts['user'] }}
 Group={{ instance.serviceOpts['group'] }}
