Update continuous-check.yml for Azure Pipelines

--- a/.azure-pipelines/continuous-check.yml
+++ b/.azure-pipelines/continuous-check.yml
@@ -21,3 +21,7 @@ steps:
     publishJUnitResults: true
     testResultsFiles: '**/TEST-*.xml'
     tasks: 'build functionalTest'
+- task: PublishTestResults@2
+  inputs:
+    testResultsFormat: 'JUnit'
+    testResultsFiles: '**/TEST-*.xml'
