--- a/.azure-pipelines/continuous-check.yml
+++ b/.azure-pipelines/continuous-check.yml
@@ -23,5 +23,7 @@ steps:
     tasks: 'build functionalTest'
 - task: PublishTestResults@2
   inputs:
+    testRunTitle: 'Tests'
     testResultsFormat: 'JUnit'
     testResultsFiles: '**/TEST-*.xml'
+    mergeTestResults: true
