Common service impl

--- a/src/asset/localInstance/service/systemd.conf
+++ b/src/asset/localInstance/service/systemd.conf
@@ -1,7 +1,7 @@
-# AEM instance service managed by Gradle AEM Plugin
+# AEM multiple instances service managed by Gradle AEM Plugin
 
 [Unit]
-Description=AEM instance '{{ instance.name }}'
+Description=AEM instances
 After=multi-user.target
 Requires=network.target
 
@@ -9,19 +9,14 @@ Requires=network.target
 Type=oneshot
 RemainAfterExit=true
 
-# TODO use PID & handle restrictions
-#Type=forking
-#GuessMainPID=no
-#PIDFile={{ instance.pidFile }}
-
 User={{ service.opts['user'] }}
 Group={{ service.opts['group'] }}
 
 LimitNOFILE={{ service.opts['limitNoFile'] }}
 KillMode=none
 
-ExecStart={{instance.dir}}/service/start.sh
-ExecStop={{instance.dir}}/service/stop.sh
+ExecStart={{service.opts['dir']}}/start.sh
+ExecStop={{service.opts['dir']}}/stop.sh
 
 TimeoutStartSec=1810
 TimeoutStopSec=190
