--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
 
       - name: Build, release then publish assets
         run: |
-          ./gradlew fullRelease \
+          ./gradlew -i -S fullRelease \
             -Pgithub.token=${{ secrets.GITHUB_TOKEN }} \
             -Pgradle.publish.key=${{ secrets.GRADLE_PUBLISH_KEY }} \
             -Pgradle.publish.secret=${{ secrets.GRADLE_PUBLISH_SECRET }}
