--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - uses: fregante/setup-git-user@v1
 
       - name: Set up JDK 11
         uses: actions/setup-java@v2
